# tax

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  render.yaml
backend/: alembic.ini  pyproject.toml  requirements.txt  vercel.json
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_signature_seal_split_and_number_format.py  a3b4c5d6e7f8_add_signature_email.py  b4c5d6e7f8a9_add_certificate_image_path.py  c5d6e7f8a9b0_binary_storage_for_images_and_pdfs.py  c7d8e9f0a1b2_multi_company_support.py  d1e2f3a4b5c6_payment_date_and_base_rate_columns.py  e1f2a3b4c5d6_fix_numbering_config_id_sequence.py  e2f3a4b5c6d7_drop_designated_officer_fields.py  e8fd48028372_editable_tin_status_and_email_open_.py  eb07c9c490e5_initial_tax_certificate_module_schema.py  f2a3b4c5d6e7_remove_logo_and_percert_signature.py
backend/app/: config.py  database.py  main.py
backend/app/api/: routes.py
backend/app/models/: __init__.py  entities.py
backend/app/schemas/: __init__.py
backend/app/services/: aggregation.py  amount_in_words.py  certificate_generator.py  excel_export.py  excel_import.py  numbering.py  pdf_renderer.py  rate_hook.py  validation.py
backend/app/services/dispatch/: __init__.py  email_sender.py  queue.py  whatsapp_sender.py
backend/tests/: test_module.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.js
frontend/public/: Sample_TDS_Format.xlsx
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: client.js
frontend/src/components/: VirtualizedTable.jsx  ui.jsx
frontend/src/context/: CompanyContext.jsx
frontend/src/pages/: CertificateIssue.jsx  Dashboard.jsx  Import.jsx  Settings.jsx
