[project]
name = "tax-certificate-backend"
version = "0.1.2"
requires-python = ">=3.10"
# Mirrors requirements.txt (still used by the Render/Railway deploy paths),
# minus two things that don't belong in the deployed bundle: uvicorn (only
# ever used to launch a local/Docker server process — Vercel's Python
# runtime serves the ASGI `app` object itself, it never runs uvicorn) and
# pytest (test-only). Trimmed because the full set exceeded Vercel's 500MB
# function bundle limit (542MB). Vercel's Python builder resolves/locks
# dependencies from this [project] table via uv, not from requirements.txt.
dependencies = [
    "fastapi>=0.110",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "reportlab>=4.1",
    "pymupdf>=1.24",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    'psycopg2-binary>=2.9 ; python_version >= "3.10"',
]

[tool.vercel]
# Vercel's Python runtime auto-detects a FastAPI entrypoint in a handful of
# default locations (api/index.py, main.py, etc.); ours lives at app/main.py
# relative to this backend/ directory (set as the Vercel project's Root
# Directory), so it needs to be told explicitly.
entrypoint = "app.main:app"
