[project]
name = "tax-certificate-backend"
version = "0.1.4"
requires-python = ">=3.10"
# Mirrors requirements.txt (still used by the Render/Railway deploy paths),
# minus what doesn't belong in the deployed bundle: uvicorn (only ever used
# to launch a local/Docker server process — Vercel's Python runtime serves
# the ASGI `app` object itself, it never runs uvicorn), pytest (test-only),
# and alembic (migration tooling, run separately against DATABASE_URL —
# never imported by the app itself at request-serving time). Also swapped
# psycopg2-binary for pg8000: psycopg2-binary statically bundles libpq +
# OpenSSL, which is one of the largest contributors on Linux; pg8000 is a
# pure-Python driver with no bundled binaries (see database.py for the
# matching ssl_context connect_args). Trimmed because the full set exceeded
# Vercel's 500MB Python function bundle limit (542MB, then 513.68MB, then
# 512.37MB). Vercel's Python builder resolves/locks dependencies from this
# [project] table via uv, not from requirements.txt.
dependencies = [
    "fastapi>=0.110",
    "sqlalchemy>=2.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "reportlab>=4.1",
    "pymupdf>=1.24",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "pg8000>=1.31",
]

[tool.vercel]
# Vercel's Python runtime auto-detects a FastAPI entrypoint in a handful of
# default locations (api/index.py, main.py, etc.); ours lives at app/main.py
# relative to this backend/ directory (set as the Vercel project's Root
# Directory), so it needs to be told explicitly.
entrypoint = "app.main:app"
